<resources>
    <string name="app_name">BuscoolVersion1</string>
    <string name="driver_title">Driver Mode</string>
    <string name="start_a_trip_button">Start a trip</string>
    <string name="edit_a_trip">Edit a trip</string>
    <string name="edit_trips">Edit trips</string>
    <string name="create_trip">Create a trip</string>
    <string name="Choose_name">Choose a name for the trip</string>
    <string name="next_button">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_id">TripId</string>
    <string name="new_client_title">Create a client</string>
    <string name="set_location">Set Location</string>
    <string name="save_client">Save</string>
    <string name="choose_number">Choose a number for the trip</string>
</resources>
